--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -504,7 +504,7 @@
                     {
                     Controller =  "Position",
                     Action = "GetPositions",
-                    Icon = "ri-tv-fill",
+                    Icon = "ri-briefcase-fill",
                     Label = "Positions",
                     Roles = new[] {"Admin","HR Manager"}
                     },
@@ -553,7 +553,7 @@
                     {
                     Controller =  "Country",
                     Action = "GetCountries",
-                    Icon = "ri-map-pin-user-line",
+                    Icon = "ri-earth-line",
                     Label = "Countries",
                     Roles = new[] {"Admin","HR Manager"}
                     },
@@ -561,7 +561,7 @@
                     {
                     Controller =  "Company",
                     Action = "GetCompanies",
-                    Icon = "ri-community-line",
+                    Icon = "ri-building-line",
                     Label = "Companies",
                     Roles = new[] {"Admin","HR Manager"}
                     },
