--- a/CMS/CMS.Web/Views/Country/GetCountries.cshtml
+++ b/CMS/CMS.Web/Views/Country/GetCountries.cshtml
@@ -7,6 +7,13 @@
     ViewData["Title"] = "Countries";
 }
 
+<style>
+    .card-body {
+        width: 100%;
+        max-width: 100%;
+        overflow-y: hidden;
+    }
+</style>
 
 <div class="row">
     <div class="col-lg-12">
