--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -1,5 +1,7 @@
 ﻿@using CMS.Domain.Enums;
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 @model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
 
 @{
@@ -47,10 +49,7 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
-            <div class="card-header d-flex align-items-center">
-                <h5 class="card-title mb-0 flex-grow-1">My Interviews</h5>
-
-            </div>
+       
             <div class="card-body">
              
                 <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
@@ -61,8 +60,7 @@
                             <th>Level</th>
                             <th>Track</th>
                             <th hidden>Interviewer</th>
-                            <th>Date</th>
-                            <th>Time</th>
+                            <th>Date and Time</th>
                             <th hidden>Parent ID</th>
                             @if (User.IsInRole("Interviewer"))
                             {
@@ -97,8 +95,10 @@
                                 <td>@Html.DisplayFor(modelItem => item.Name)</td>
                                 <td>@Html.DisplayFor(modelItem => item.TrackName)</td>
                                 <td hidden>@item.InterviewerName</td>
-                                <td>@item.Date.ToString("dd-MM-yyyy")</td>
-                                <td>@item.Date.ToString("h:mm tt")</td>
+                                <td>
+                                    <div>@item.Date.ToString("dd-MM-yyyy")</div>
+                                    <div>@item.Date.ToString("h:mm tt")</div>
+                                </td>
                                 <td hidden>@item.ParentId</td>
                                 @if (User.IsInRole("Interviewer"))
                                 {
@@ -239,3 +239,10 @@
     }
 </script>
 
+<script>
+    $.noConflict();
+    jQuery(document).ready(function ($) {
+        $('#add-rows').DataTable();
+
+    });
+</script>
