--- a/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/UpdateAfterInterviewForEdit.cshtml
@@ -17,22 +17,17 @@
     {
         <div class="form-group">
             <label asp-for="Score"><span class="text-danger">*</span> Score out of 5:</label>
-            <input style="width: 30%;" asp-for="Score" class="form-control" />
+            <input style="width: 10%;" asp-for="Score" class="form-control" />
             <span asp-validation-for="Score" class="text-danger"></span>
         </div>
     }
 
-    <div class="form-group" style="margin-top: 15px;">
-        <label asp-for="Notes">Notes:</label>
-        <textarea style="width: 30%;" asp-for="Notes" class="form-control"></textarea>
-        <span asp-validation-for="Notes" class="text-danger"></span>
-    </div>
-
+  
     @if (!User.IsInRole("HR Manager"))
     {
         <div class="form-group" style="margin-top: 15px;">
             <label asp-for="ActualExperience"><span class="text-danger">*</span> Actual Experience:</label>
-            <textarea style="width: 30%;" asp-for="ActualExperience" class="form-control"></textarea>
+            <input style="width: 10%;" asp-for="ActualExperience" class="form-control" pattern="^(?:0(\.\d+)?|[1-9]\d*(\.\d+)?)$" title="Experience must be a non-negative numeric value." />
             <span asp-validation-for="ActualExperience" class="text-danger"></span>
         </div>
     }
@@ -61,6 +56,12 @@
         }
         <span asp-validation-for="StatusId" class="text-danger"></span>
 
+    </div>
+
+    <div class="form-group" style="margin-top: 15px;">
+        <label asp-for="Notes">Notes:</label>
+        <textarea style="width: 40%;" asp-for="Notes" class="form-control"></textarea>
+        <span asp-validation-for="Notes" class="text-danger"></span>
     </div>
 
 
