--- a/CMS/CMS.Web/Views/Position/GetPositions.cshtml
+++ b/CMS/CMS.Web/Views/Position/GetPositions.cshtml
@@ -1,11 +1,19 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.PositionDTO>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css" rel="stylesheet" />
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 
 @{
     ViewData["Title"] = "Positions";
 }
 
-
+<style>
+    .card-body {
+        width: 100%;
+        max-width: 100%;
+        overflow-y: hidden;
+    }
+</style>
 
 <div class="row">
     <div class="col-lg-12">
@@ -18,7 +26,7 @@
 
 
             <div class="card-body">
-                <table class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
+                <table id="add-rows" class="table table-nowrap dt-responsive table-bordered display" style="width:100%">
                     <thead>
                         <tr>
                             <th>#</th>
@@ -64,3 +72,10 @@
     </div>
 
 </div>
+<script>
+    $.noConflict();
+    jQuery(document).ready(function ($) {
+        $('#add-rows').DataTable();
+
+    });
+</script>
