--- a/CMS/CMS.Web/Views/SearchInterviews/ShowHistory.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/ShowHistory.cshtml
@@ -57,5 +57,6 @@
     </div>
 </div>
 <div>
-    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+    <a class ="btn btn-secondary" href="@Url.Action("Index", new { positionFilter = ViewBag.PositionFilter, scoreFilter = ViewBag.ScoreFilter, statusFilter = ViewBag.StatusFilter, candidateFilter = ViewBag.CandidateFilter, interviewerFilter = ViewBag.InterviewerFilter, fromDate = ViewBag.FromDate, toDate = ViewBag.ToDate, trackFilterDropdown = ViewBag.TrackList })">Back to List</a>
+
 </div>
