fixing archi problem

--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using CMS.Domain.Enums
 @model CMS.Application.DTOs.InterviewsDTO
 
-<h2>Interviews Details</h2>
+<h2>Interviews Detail</h2>
 
 <div>
     <hr />
