--- a/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/MyInterviews.cshtml
@@ -162,7 +162,7 @@
                                 <td>
                                             <input type="hidden" name="InterviewerId" value="@item.InterviewerId" />
 
-                                        <a class="bx bx-plus" style="font-size:x-large" asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId"  asp-route-iddd="@item.EvalutaionFormId"> </a>
+                                            <a class="bx bx-plus" style="font-size:x-large" asp-action="UpdateAfterInterview" asp-route-id="@item.InterviewsId" asp-route-iddd="@item.EvalutaionFormId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Add result"> </a>
                                     </td>
                                 }
                                 else
