--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -1,14 +1,12 @@
 ﻿@model CMS.Application.DTOs.InterviewsDTO
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Interview";
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete this?</h4>
 <div>
-    <h4>InterViews</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
