--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -1,9 +1,8 @@
 ﻿@model CMS.Application.DTOs.InterviewsDTO
 
-<h2>Details</h2>
+<h2>Interview Details</h2>
 
 <div>
-    <h4>Interview</h4>
     <hr />
     <dl class="row">
 
