--- a/CMS/CMS.Web/Views/Account/Create.cshtml
+++ b/CMS/CMS.Web/Views/Account/Create.cshtml
@@ -4,23 +4,23 @@
 
 <form asp-action="Create" method="post"> @* enctype="multipart/form-data" *@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="form-group">
+    <div class="form-group" style="width:30%;">
         <label asp-for="Email" class="control-label"><span class="text-danger">*</span> Email</label>
         <input asp-for="Email" class="form-control" id="email" />
         <span id="emailError" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="UserName" class="control-label"><span class="text-danger">*</span> Username</label>
         <input asp-for="UserName" class="form-control" id="userName" />
         <span id="userNameError" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="Password" class="control-label"><span class="text-danger">*</span> Password</label>
         <input asp-for="Password" type="password" class="form-control" id="password" />
         <span id="passwordError" class="text-danger"></span>
 
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="ConfirmPassword" class="control-label"><span class="text-danger">*</span> Confirm Password</label>
         <input asp-for="ConfirmPassword" type="password" class="form-control" id="confirmpassword" />
         <span id="confirmPasswordError" class="text-danger"></span>
@@ -34,7 +34,7 @@
     </div> *@
 
 
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="SelectedRole" class="control-label"><span class="text-danger">*</span> Role:</label>
         @Html.DropDownListFor(model => model.SelectedRole, (SelectList)ViewBag.Roles, "Select a Role", new { @class = "form-control", id = "selectedRole" })
         <span id="selectedRoleError" class="text-danger"></span>
@@ -47,7 +47,7 @@
     </div> *@
 
 
-    <div class="form-group " style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 30px;">
         <input type="submit" value="Create" class="btn btn-primary" onclick="validateForm(event)" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
     </div>
