--- a/CMS/CMS.Web/Views/Account/Edit.cshtml
+++ b/CMS/CMS.Web/Views/Account/Edit.cshtml
@@ -7,22 +7,22 @@
 <form asp-action="Edit" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group"><input type="hidden" asp-for="RegisterrId" /></div>
-    <div class="form-group">
+    <div class="form-group" style="width:30%;">
         <label asp-for="Email" class="control-label">Email</label>
         <input asp-for="Email" class="form-control" />
         <span asp-validation-for="Email" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="UserName" class="control-label">Username</label>
         <input asp-for="UserName" class="form-control" />
         <span asp-validation-for="UserName" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="Password" class="control-label">Password</label>
         <input asp-for="Password" type="password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
-    <div class="form-group" style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="ConfirmPassword" class="control-label">Confirm Password</label>
         <input asp-for="ConfirmPassword" type="password" class="form-control" />
         <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
@@ -36,13 +36,13 @@
         <span asp-validation-for="SelectedRole" class="text-danger"></span>
     </div> *@
 
-    <div class="form-group"style="margin-top:15px;">
+    <div class="form-group" style="margin-top:15px;width:30%;">
         <label asp-for="SelectedRole" class="control-label">Role:</label>
         @Html.DropDownListFor(model => model.SelectedRole, (SelectList)ViewBag.Roles, new { @class = "form-control" })
         <span asp-validation-for="SelectedRole" class="text-danger"></span>
     </div>
 
-    <div class="form-group " style="margin-top: 10px;">
+    <div class="form-group " style="margin-top: 30px;">
         <input type="submit" value="Submit" class="btn btn-primary" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
