--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -1,10 +1,9 @@
 ﻿@model CMS.Application.DTOs.InterviewsDTO
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Interview";
 }
 
-<h1>Delete</h1>
 <style>
     /* Style for the modal container */
     .confirmation-modal {
@@ -54,9 +53,8 @@
             cursor: pointer;
         }
 </style>
-<h3>Are you sure you want to delete this?</h3>
+<h4>Are you sure you want to delete this?</h4>
 <div>
-    <h4>InterViews</h4>
     <hr />
     <dl class="row">
 
