--- a/CMS/CMS.Web/Views/Interviews/ShowHistory.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/ShowHistory.cshtml
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-header d-flex align-items-center">
-                <h5 class="card-title mb-0 flex-grow-1">My Interviews</h5>
+                <h5 class="card-title mb-0 flex-grow-1">View History: <span style="color:red">@ViewBag.CandidateName</span></h5>
 
             </div>
             <div class="card-body">
