--- a/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Index.cshtml
@@ -90,7 +90,7 @@
             <tr>
                 <th>#</th>
                 <th>Candidate Name</th>
-                <th>Position</th>
+                <th>Level</th>
                 <th>Track</th>
                 <th>Interviewer/s</th>
                 <th>Date and Time</th>
@@ -164,7 +164,7 @@
                             } *@
 
                             <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Details"></a> |
-                            @if (item.ParentId == null)
+                            @if (item.ParentId == null && item.StatusName != StatusCode.GetName("REJ"))
                             {
                                 <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Delete"></a>
                             }
