--- a/CMS/CMS.Web/Views/SearchInterviews/ShowHistory.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/ShowHistory.cshtml
@@ -1,12 +1,13 @@
 ﻿@model IEnumerable<CMS.Application.DTOs.InterviewsDTO>
 
 
-
 <div class="row">
     <div class="col-lg-12">
         <div class="card">
+
             <div class="card-header d-flex align-items-center">
-                <h5 class="card-title mb-0 flex-grow-1">My Interviews</h5>
+
+                <h5 class="card-title mb-0 flex-grow-1">View History: <span style="color:red;">@ViewBag.CandidateName</span></h5>
 
             </div>
             <div class="card-body">
@@ -60,3 +61,4 @@
     <a class ="btn btn-secondary" href="@Url.Action("Index", new { positionFilter = ViewBag.PositionFilter, scoreFilter = ViewBag.ScoreFilter, statusFilter = ViewBag.StatusFilter, candidateFilter = ViewBag.CandidateFilter, interviewerFilter = ViewBag.InterviewerFilter, fromDate = ViewBag.FromDate, toDate = ViewBag.ToDate, trackFilterDropdown = ViewBag.TrackList })">Back to List</a>
 
 </div>
+
