Fixing Archi Problem

--- a/CMS/CMS.Web/Views/Account/ChangePassword.cshtml
+++ b/CMS/CMS.Web/Views/Account/ChangePassword.cshtml
@@ -68,13 +68,13 @@
     </div>
 
     <form asp-action="ChangePassword" method="post" id="changePasswordForm">
-        <label for="CurrentPassword">Current Password:</label>
+        <label for="CurrentPassword"><span style="color:red;">*</span> Current Password:</label>
         <input asp-for="CurrentPassword" class="form-control" />
 
-        <label for="NewPassword">New Password:</label>
+        <label for="NewPassword"><span style="color:red;">*</span> New Password:</label>
         <input asp-for="NewPassword" class="form-control" />
 
-        <label for="ConfirmPassword">Confirm New Password:</label>
+        <label for="ConfirmPassword"><span style="color:red;">*</span> Confirm New Password:</label>
         <input asp-for="ConfirmPassword" class="form-control" />
 
         <button type="submit" class="btn btn-primary">Change Password</button>
